--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+# omar-basemap
+
+## Description
+
+The OMAR Basemap service serves out Open Street Map tiles to the user.
+
 This repo currently has a Dockerfile and a Docker image.  Currently the Dockerfile and image are both based on Debian.  The Dockerfile was pulled from this repo: https://github.com/klokantech/tileserver-gl
 
 Build the docker image by doing the following: docker build .
